# ar_tracking_tools

./: CMakeLists.txt  README.md  package.xml  setup.py
bundles/: 3x6_grid_5.0cm_marker_7.0cm_spacing.xml  bag_bundle.xml
include/ar_tracking_tools/: alvar_bundle_tracker.h  colors.h  consensus_bundle_refinement.h
launch/: asus_ransac.launch  asus_tracking.launch  bundle_tracking.launch  prosilica_ar_track_bag.launch  track_bundle_ransac.launch
nodes/: FindMarkerBundles.cpp  FindMarkerBundlesNoKinect.cpp  alvar_bundle_tracker_node.cpp
notebooks/: AR_Marker_3D_Target.html  AR_Marker_Bag.ipynb  AR_Marker_Board_Creation.html  AR_Marker_Board_Creation.ipynb  AR_Marker_Creation_Demo.html  AR_Marker_Creation_Demo.ipynb
notebooks/example_bundles/: test_bundle.xml
scripts/: ar_ransac.py  make_grid_config.py
src/ar_tracking_tools/: bundle_pdf_utils.py  bundle_visualization_utils.py  bundle_xml_utils.py  geometry_utils.py  marker_utils.py
src_cpp/: alvar_bundle_tracker.cpp  consensus_bundle_refinement.cpp
