<package>
  <name>ar_tracking_tools</name>
  <version>0.0.1</version>
  <description>
    Tools for using AR tags for pose estimation.
  </description>
  <maintainer email="bokorn@andrew.cmu.edu">Brian Okorn</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  
</package>
